create Event entity, EventActivity and AddEventActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,12 @@
         <activity android:name=".ui.AddPersonActivity">
 
         </activity>
+        <activity android:name=".ui.AddEventActivity">
+
+        </activity>
+        <activity android:name=".ui.EventActivity">
+
+        </activity>
     </application>
 
 </manifest>
